<resources>
    <string name="app_name">Book Scout</string>
    <string name="action_settings">Settings</string>
    <string name="popup_title">Enter Book or Author\'s Name</string>
    <string name="search_button">Search</string>
    <string name="search_hint">E.g Harry Potter</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="published_by">Published By</string>
    <string name="publisher_na">Publisher N/A</string>
    <string name="pages_na">Pages N/A</string>
    <string name="author">Author: </string>
    <string name="whoops">Whoops!</string>
    <string name="network_error">You don\'t seem to be connected to the Internet. Please check your connection and try again or exit and try later.</string>
    <string name="networkError">You don\'t seem to be connected to the Internet. Please check your connection and try again or exit and try later.</string>
    <string name="parse_error">You don\'t seem to be connected to the Internet. Please check your connection and try again or exit and try later.</string>
    <string name="server_error">You don\'t seem to be connected to the Internet. Please check your connection and try again or exit and try later.</string>
    <string name="waiting_string">Waiting for Network...</string>
    <string name="searching">Searching...</string>
    <string name="error_message">Error Message</string>
    <string name="book_title">Book Title</string>
    <string name="author_name">Author Name</string>

</resources>
