<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp" >
        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/popup_title" />

            <EditText
                android:id="@+id/searchID"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/title"
                android:paddingLeft="15dp"
                android:paddingRight="2dp"
                android:textSize="15sp"
                android:background="@drawable/input_text_background"
                android:layout_marginTop="30dp"
                android:hint="@string/search_hint"
                android:inputType="textCapWords" />



            <Button
                android:id="@+id/searchbuttonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchID"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/search_button"
                android:textColor="#FFF"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>