<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.BookDetailActivity"
    tools:showIn="@layout/activity_book_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/bookImg"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                app:srcCompat="@android:color/background_dark" />

            <TextView
                android:id="@+id/titleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:textSize="32sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:text="TextView" />

            <TextView
                android:id="@+id/authorID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="TextView" />

            <View
                android:id="@+id/view"
                android:background="@android:color/darker_gray"
                android:layout_width="280dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_height="1px" />

            <TextView
                android:id="@+id/publishedByText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/published_by"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/publishedByID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/publisher_na"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pagesID"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@string/pages_na" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>